adding package for sort and filter

--- a/Flight_Passengers/composer.json
+++ b/Flight_Passengers/composer.json
@@ -15,7 +15,8 @@
         "laravel/framework": "^8.1",
         "laravel/sanctum": "^2.15",
         "laravel/tinker": "^2.0",
-        "spatie/laravel-permission": "^5.11"
+        "spatie/laravel-permission": "^5.11",
+        "spatie/laravel-query-builder": "^4.0"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
